--- a/portfolio.html
+++ b/portfolio.html
@@ -192,7 +192,7 @@ function myFunction() {
 
 			
 			<div class="featurette" id="about">
-				<h2 class="featurette-heading">About Me</span></h2>
+				<h2 class="featurette-heading">About Me</h2>
 				<div class="row">
 					<div>
 						<p class="lead">I am a multimedia journalist with skills in all forms of reporting and storytelling. I have done a Postgraduate Diploma in Integrated Journalism from the Asian College of Journalism and have 16
@@ -345,31 +345,35 @@ bylines in my name so far across four publications (The Hindu, The Citizen, The 
 <hr>
 <div class="flourish-embed" data-src="story/1162426"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 </details>
+
 	
   </div>
 
 </div>
 
 
-			</div>
+			
 			
 			<hr class="featurette-divider">
 
-			<div class="featurette" id="resume">
+<div class="featurette" id="resume">
 				<h2 class="featurette-heading">Resume</h2>
-					<a href="https://sreedev98.github.io/Sreedev%20Krishnakumar_CV.pdf" target="_blank">Click here to view/download my resume</a>
+				<div class="row">
+					<div>
+						<p class="lead"><a href="https://sreedev98.github.io/Sreedev%20Krishnakumar_CV.pdf" target="_blank">Click here to view/download my resume</a></p>
+					</div>
+				</div>
 			</div>
+			
+<hr class="featurette-divider">
 
-			<hr class="featurette-divider">
-
-			<div class="featurette" id="contact">
+<div class="featurette" id="contact">
 				<h2 class="featurette-heading">Contact</h2>
 				<div class="row">
-
-					
 					<div>
-						<a href="mailto: &#115;&#114;&#101;&#101;&#100;&#101;&#118;&#057;&#056;&#064;&#112;&#114;&#111;&#116;&#111;&#110;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"">&#115;&#114;&#101;&#101;&#100;&#101;&#118;&#057;&#056;&#064;&#112;&#114;&#111;&#116;&#111;&#110;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
-
+						<p class="lead"><a href="mailto: &#115;&#114;&#101;&#101;&#100;&#101;&#118;&#057;&#056;&#064;&#112;&#114;&#111;&#116;&#111;&#110;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"">&#115;&#114;&#101;&#101;&#100;&#101;&#118;&#057;&#056;&#064;&#112;&#114;&#111;&#116;&#111;&#110;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
+</p>
+					</div>
 				</div>
 			</div>
 			
