--- a/Varta-Man/Prototype.html
+++ b/Varta-Man/Prototype.html
@@ -9,62 +9,115 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Prototype.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Prototype" startnode="1" creator="Twine" creator-version="2.3.16" ifid="4144E6FE-D22D-4A50-88F2-17F5EF1CCCBC" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Beginning" tags="" position="405,171.5" size="100,100">You are Avni, a 20-year-old who has been physically differently-abled since birth due to cerebral palsy. You are a student of the Madras Presidency College. 
+<tw-storydata name="Prototype" startnode="1" creator="Twine" creator-version="2.3.16" ifid="4144E6FE-D22D-4A50-88F2-17F5EF1CCCBC" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-story[tags~="Default"] {
+	background-color: #ebe9e9;
+	color: black;
+	font-family: Georgia, serif;
+}
+tw-story[tags~="srinivasan"] {
+background-color: #fde2d9;
+color: black;
+font-family: Georgia, serif;
+}
 
-On a Monday morning, you left home to go to college.
+tw-story[tags~="gravel"] {
+background-color: #dfdfdf;
+color: black;
+font-family: Georgia, serif;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Beginning" tags="Default" position="407,171" size="100,100">
+###(text-colour:red)[Crippled] Accessible India Campaign
+//Seven years since the launch of the program, how accessible are public educational institutions in India?//
+---
 
-Due to your condition, for mobility, you use a:
-[[Pair of Crutches-&gt;Crutches]]
+You are Avni, a 20-year-old who has been physically differently-abled since birth due to cerebral palsy. You are a student of the Madras Presidency College. 
 
-[[Wheelchair-&gt;Wheelchair]]</tw-passagedata><tw-passagedata pid="2" name="Crutches" tags="" position="330,321.5" size="100,100">What do you do next?
+On a Monday morning, you left home to go to college and reached its entrance.
+
+&lt;center&gt;&lt;img src=&quot;https://sreedev98.github.io/Varta-Man/Chapter%200.gif&quot; width=&quot;50%&quot; height=&quot;50%&quot;&gt;&lt;/center&gt;
+
+Due to your condition, for mobility, you are using a:
+&lt;style&gt;
+.boxer {
+   display: table;
+   border-collapse: collapse;
+}
+ 
+.boxer .box-row {
+   display: table-row;
+}
+ 
+.boxer .box {
+   display: table-cell;
+   text-align: center;
+}
+
+&lt;/style&gt;
+&lt;div class=&quot;boxer&quot;&gt;
+	&lt;div class=&quot;box-row&quot;&gt;
+		&lt;div class=&quot;box&quot;&gt;[[&lt;img src=&quot;https://sreedev98.github.io/Varta-Man/crutches.png&quot; width=&quot;20%&quot; height=&quot;15%&quot; /&gt;-&gt;Crutches]]&lt;/div&gt;
+		&lt;div class=&quot;box&quot;&gt;[[&lt;img src=&quot;https://sreedev98.github.io/Varta-Man/wheelchair.png&quot; width=&quot;35%&quot; height =&quot;35%&quot; /&gt;-&gt;Wheelchair]]&lt;/div&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;box-row&quot;&gt;
+		&lt;div class=&quot;box&quot;&gt;[[Pair of Crutches-&gt;Crutches]]&lt;/div&gt;
+		&lt;div class=&quot;box&quot;&gt;[[Wheelchair-&gt;Wheelchair]]&lt;/div&gt;
+	&lt;/div&gt;
+&lt;/div&gt;
+</tw-passagedata><tw-passagedata pid="2" name="Crutches" tags="" position="330,321" size="100,100">What do you do next?
 
 [[Lodge a complaint with the Cell for Differently Abled individuals in the campus regarding the lack of accessible infrastructure for the differently-abled-&gt;Cell]]
 
-[[Grab some food from the canteen as you got late and had to forego your breakfast to catch your bus in the morning-&gt;canteen]]</tw-passagedata><tw-passagedata pid="3" name="Wheelchair" tags="" position="480,321.5" size="100,100">You had to take assistance from someone to lift your wheelchair due to a doorstep in the path.
+[[Grab some food from the canteen as you got late and had to forego your breakfast to catch your bus in the morning-&gt;canteen]]</tw-passagedata><tw-passagedata pid="3" name="Wheelchair" tags="Default" position="480,321" size="100,100">You had to take assistance from someone to lift your wheelchair due to a doorstep in the path.
 
 What will you do next?
 
 [[Meet professor Mr Srinivasan in the hearing impairment department to discuss with him a research paper you are writing.-&gt;Srinivasan]]
 
-[[Go to the restroom-&gt;Restroom]]</tw-passagedata><tw-passagedata pid="4" name="Srinivasan" tags="" position="315,471.5" size="100,100">There are two possible paths to reach Mr Srinivasan&#39;s office. Which one will you choose?
+[[Go to the restroom-&gt;Restroom]]</tw-passagedata><tw-passagedata pid="4" name="Srinivasan" tags="srinivasan" position="315,471" size="100,100">There are two possible paths to reach Mr Srinivasan&#39;s office. Which one will you choose?
+
+&lt;center&gt;&lt;img src=&quot;https://sreedev98.github.io/Varta-Man/Wheelchair%202.png&quot; width=&quot;60%&quot; height=&quot;60%&quot;/&gt;&lt;/center&gt;
 
 [[Cross a cricket field. But you will have to be extremely careful to dodge any ball coming at you.-&gt;cricket field]]
 
-[[Push your wheelchair across a gravel road with loose stones to reach the hearing-impaired department building-&gt;gravel road]]</tw-passagedata><tw-passagedata pid="5" name="Restroom" tags="" position="555,471.5" size="100,100">There are two routes that you can take to reach the restroom.
+[[Push your wheelchair across a gravel road with loose stones to reach the hearing-impaired department building.-&gt;gravel road]]</tw-passagedata><tw-passagedata pid="5" name="Restroom" tags="" position="555,471" size="100,100">There are two routes that you can take to reach the restroom.
 
 [[The narrow route is very crowded but you will need to only go 200 metres ahead to reach the washroom-&gt;narrow]]
 
-[[The longer route will require you to travel 700 metres to reach the washroom but is wide and has lesser crowd on the way -&gt;longer]]</tw-passagedata><tw-passagedata pid="6" name="cricket field" tags="" position="330,621.5" size="100,100">Once you reached the hearing-impaired building, you had to call the professor downstairs as his office is located on the first floor and there are no elevators in the building.
+[[The longer route will require you to travel 700 metres to reach the washroom but is wide and has lesser crowd on the way -&gt;longer]]</tw-passagedata><tw-passagedata pid="6" name="cricket field" tags="srinivasan" position="480,621" size="100,100">Once you reached the hearing-impaired building, you had to call the professor downstairs as his office is located on the first floor and there are no elevators in the building.
 
 (after:2s)[&#39;&#39;You:&#39;&#39; Hello Sir!]
 (after:4s)[&#39;&#39;Srinivasan:&#39;&#39; Hello Avni! How are you? Did you face any difficulties reaching here?]
+
+(after:1s)[&lt;center&gt;&lt;img src=&quot;https://sreedev98.github.io/Varta-Man/Srinivasan%20Office.gif&quot; width=&quot;40%&quot; height=&quot;40%&quot; /&gt;&lt;/center&gt;]
+
 (after:6s)[&#39;&#39;You:&#39;&#39; Good Afternoon! Yes sir, it was difficult to reach the office.]
 (after:8s)[&#39;&#39;Srinivasan:&#39;&#39; Oh Avni, sorry. What brings you here?]
 (after:10s)[&#39;&#39;You:&#39;&#39; Sir I am currently writing a research paper on problems faced by hearing-impaired people in their daily lives. I wanted to know more about the difficulties they face during their daily commute.]
 (after:12s)[&#39;&#39;Srinivasan:&#39;&#39; Oh, yes. Here is something you could look at. According to the data given by Tamil Nadu state government, in Chennai city 175 auditory signages had been proposed to be set up in various traffic signals. But in reality most places have no such devices.]
 (after:14s)[&#39;&#39;You:&#39;&#39; Oh, thank you so much sir for your insight.]
 
-(Slot for data)</tw-passagedata><tw-passagedata pid="7" name="gravel road" tags="" position="480,621.5" size="100,100">(text-colour:red)[Stones get stuck in your wheelchair. You cannot move forward!]
+(Slot for data)</tw-passagedata><tw-passagedata pid="7" name="gravel road" tags="gravel" position="675,501" size="100,100">&lt;center&gt;&lt;img src=&quot;https://sreedev98.github.io/Varta-Man/rocks.png&quot; width=&quot;70%&quot; height=&quot;70%&quot; /&gt;&lt;/center&gt;
+
+(text-colour:red)[Stones get stuck in your wheelchair. You cannot move forward!]
 
 (Slot for data)
 
-According to the Accessible India mission, the Government of India has made it compulsory to install tactile tiles, ramps and routes in the campus of public institutions to make public buildings accessible to differently-abled individuals. </tw-passagedata><tw-passagedata pid="8" name="narrow" tags="" position="600,621.5" size="100,100">(text-colour:red)[&#39;&#39;You are stuck!&#39;&#39;]</tw-passagedata><tw-passagedata pid="9" name="longer" tags="" position="720,621.5" size="100,100">It takes around 10 minutes for you to reach the washroom. 
+According to the Accessible India mission, the Government of India has made it compulsory to install tactile tiles, ramps and routes in the campus of public institutions to make public buildings accessible to differently-abled individuals. </tw-passagedata><tw-passagedata pid="8" name="narrow" tags="" position="600,621" size="100,100">(text-colour:red)[&#39;&#39;You are stuck!&#39;&#39;]</tw-passagedata><tw-passagedata pid="9" name="longer" tags="" position="720,621" size="100,100">It takes around 10 minutes for you to reach the washroom. 
 
 After freshning up, you decide to use a stall. You realise that there is no special stall installed for differently-abled persons and decide to leave, disappointed.
 
-(Data insert- Research revealed 78% of disabled people are still having to avoid going places that do not have an accessible toilet.)</tw-passagedata><tw-passagedata pid="10" name="Cell" tags="" position="195,471.5" size="100,100">You reach the building where the cell is located and realise that the office is located on the first floor. You have to choose between two options:
+(Data insert- Research revealed 78% of disabled people are still having to avoid going places that do not have an accessible toilet.)</tw-passagedata><tw-passagedata pid="10" name="Cell" tags="" position="195,471" size="100,100">You reach the building where the cell is located and realise that the office is located on the first floor. You have to choose between two options:
 
 [[Call those in-charge of maintainance to repair the broken elevator-&gt;elevator]]
-[[Climb the stairs with the help of someone else-&gt;stairs]]</tw-passagedata><tw-passagedata pid="11" name="canteen" tags="" position="435,471.5" size="100,100">You reach the canteen and it is packed with people.
+[[Climb the stairs with the help of someone else-&gt;stairs]]</tw-passagedata><tw-passagedata pid="11" name="canteen" tags="" position="435,471" size="100,100">You reach the canteen and it is packed with people.
 
 [[You try to get a place in the canteen-&gt;get a place]]
 
-[[Call a friend to have food with her-&gt;friend]]</tw-passagedata><tw-passagedata pid="12" name="elevator" tags="" position="120,621.5" size="100,100">(text-colour:red)[&#39;&#39;No one answers your call!&#39;&#39;]</tw-passagedata><tw-passagedata pid="13" name="stairs" tags="" position="240,621.5" size="100,100">You reach the first floor after getting help from someone with a lot of difficulty and lodges a complaint in the office. 
+[[Call a friend to have food with her-&gt;friend]]</tw-passagedata><tw-passagedata pid="12" name="elevator" tags="" position="120,621" size="100,100">(text-colour:red)[&#39;&#39;No one answers your call!&#39;&#39;]</tw-passagedata><tw-passagedata pid="13" name="stairs" tags="" position="240,621" size="100,100">You reach the first floor after getting help from someone with a lot of difficulty and lodges a complaint in the office. 
 
-(Slot for data)</tw-passagedata><tw-passagedata pid="14" name="get a place" tags="" position="360,621.5" size="100,100">You get a place at the end of the canteen and progresses to make an order at the counter. The canteen staff refuse to serve your order at the table due to the rush.  Once you get your food, you try to balance it along with your crutches. 
+(Slot for data)</tw-passagedata><tw-passagedata pid="14" name="get a place" tags="" position="360,621" size="100,100">You get a place at the end of the canteen and progresses to make an order at the counter. The canteen staff refuse to serve your order at the table due to the rush.  Once you get your food, you try to balance it along with your crutches. 
 
 (text-colour:red)[&#39;&#39;Due to the crowd, you lose balanace and your plate falls on the floor.&#39;&#39;]
-</tw-passagedata><tw-passagedata pid="15" name="friend" tags="" position="840,621.5" size="100,100">Saniya, your best friend, helps you to order your food and carry the plate. You cannot find a seat easily but someone offers you one after waiting for 20 minutes.</tw-passagedata></tw-storydata>
+</tw-passagedata><tw-passagedata pid="15" name="friend" tags="" position="840,621" size="100,100">Saniya, your best friend, helps you to order your food and carry the plate. You cannot find a seat easily but someone offers you one after waiting for 20 minutes.</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,a=!1,i=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){a=!0,i=e}finally{try{!r&&s.return&&s.return()}finally{if(a)throw i}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
