--- a/Varta-Man/Prototype.html
+++ b/Varta-Man/Prototype.html
@@ -24,6 +24,12 @@ tw-story[tags~="gravel"] {
 background-color: #dfdfdf;
 color: black;
 font-family: Georgia, serif;
+}
+
+tw-story[tags~="restroom"] {
+background-color: #e8ebe2;
+color: black;
+font-family: Georgia, serif;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Beginning" tags="Default" position="407,171" size="100,100">
 ###(text-colour:red)[Crippled] Accessible India Campaign
 //Seven years since the launch of the program, how accessible are public educational institutions in India?//
@@ -74,12 +80,12 @@ What will you do next?
 
 [[Go to the restroom-&gt;Restroom]]</tw-passagedata><tw-passagedata pid="4" name="Srinivasan" tags="srinivasan" position="315,471" size="100,100">There are two possible paths to reach Mr Srinivasan&#39;s office. Which one will you choose?
 
-&lt;center&gt;&lt;img src=&quot;https://sreedev98.github.io/Varta-Man/Wheelchair%202.png&quot; width=&quot;60%&quot; height=&quot;60%&quot;/&gt;&lt;/center&gt;
+&lt;center&gt;&lt;img src=&quot;https://sreedev98.github.io/Varta-Man/Wheelchair%202.png&quot; width=&quot;90%&quot; height=&quot;90%&quot;/&gt;&lt;/center&gt;
 
 [[Cross a cricket field. But you will have to be extremely careful to dodge any ball coming at you.-&gt;cricket field]]
 
-[[Push your wheelchair across a gravel road with loose stones to reach the hearing-impaired department building.-&gt;gravel road]]</tw-passagedata><tw-passagedata pid="5" name="Restroom" tags="" position="555,471" size="100,100">There are two routes that you can take to reach the restroom.
-
+[[Push your wheelchair across a gravel road with loose stones to reach the hearing-impaired department building.-&gt;gravel road]]</tw-passagedata><tw-passagedata pid="5" name="Restroom" tags="restroom" position="555,471" size="100,100">There are two routes that you can take to reach the restroom.
+&lt;center&gt;&lt;img src=&quot;https://sreedev98.github.io/Varta-Man/path.png&quot; width=&quot;60%&quot; height=&quot;60%&quot;/&gt;&lt;/center&gt;
 [[The narrow route is very crowded but you will need to only go 200 metres ahead to reach the washroom-&gt;narrow]]
 
 [[The longer route will require you to travel 700 metres to reach the washroom but is wide and has lesser crowd on the way -&gt;longer]]</tw-passagedata><tw-passagedata pid="6" name="cricket field" tags="srinivasan" position="480,621" size="100,100">Once you reached the hearing-impaired building, you had to call the professor downstairs as his office is located on the first floor and there are no elevators in the building.
@@ -95,13 +101,15 @@ What will you do next?
 (after:12s)[&#39;&#39;Srinivasan:&#39;&#39; Oh, yes. Here is something you could look at. According to the data given by Tamil Nadu state government, in Chennai city 175 auditory signages had been proposed to be set up in various traffic signals. But in reality most places have no such devices.]
 (after:14s)[&#39;&#39;You:&#39;&#39; Oh, thank you so much sir for your insight.]
 
-(Slot for data)</tw-passagedata><tw-passagedata pid="7" name="gravel road" tags="gravel" position="675,501" size="100,100">&lt;center&gt;&lt;img src=&quot;https://sreedev98.github.io/Varta-Man/rocks.png&quot; width=&quot;70%&quot; height=&quot;70%&quot; /&gt;&lt;/center&gt;
+(Slot for data)</tw-passagedata><tw-passagedata pid="7" name="gravel road" tags="gravel" position="675,501" size="100,100">&lt;center&gt;&lt;img src=&quot;https://sreedev98.github.io/Varta-Man/rocks.png&quot; width=&quot;90%&quot; height=&quot;90%&quot;/&gt;&lt;/center&gt;
 
 (text-colour:red)[Stones get stuck in your wheelchair. You cannot move forward!]
 
 (Slot for data)
 
-According to the Accessible India mission, the Government of India has made it compulsory to install tactile tiles, ramps and routes in the campus of public institutions to make public buildings accessible to differently-abled individuals. </tw-passagedata><tw-passagedata pid="8" name="narrow" tags="" position="600,621" size="100,100">(text-colour:red)[&#39;&#39;You are stuck!&#39;&#39;]</tw-passagedata><tw-passagedata pid="9" name="longer" tags="" position="720,621" size="100,100">It takes around 10 minutes for you to reach the washroom. 
+According to the Accessible India mission, the Government of India has made it compulsory to install tactile tiles, ramps and routes in the campus of public institutions to make public buildings accessible to differently-abled individuals. </tw-passagedata><tw-passagedata pid="8" name="narrow" tags="" position="600,621" size="100,100">(text-colour:red)[&#39;&#39;You are stuck!&#39;&#39;]</tw-passagedata><tw-passagedata pid="9" name="longer" tags="restroom" position="720,621" size="100,100">It takes around 10 minutes for you to reach the washroom. 
+
+&lt;center&gt;&lt;img src=&quot;https://sreedev98.github.io/Varta-Man/restroom.png&quot; width=&quot;60%&quot; height=&quot;60%&quot; /&gt;&lt;/center&gt;
 
 After freshning up, you decide to use a stall. You realise that there is no special stall installed for differently-abled persons and decide to leave, disappointed.
 
