--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 		<a class="link" href="https://politicobytes.wordpress.com/" target="_blank">
             <i class="fas fa-blog">&nbsp;</i>Blog
         </a>
+	<a class="link" rel="me" href="https://mastodon.online/@sreedevkkumar" target="_blank">
+            <i class="fab fa-mastodon">&nbsp;</i>Mastodon
+        </a>
 		<a class="link" href="https://twitter.com/sreedevkkumar" target="_blank">
             <i class="fab fa-twitter">&nbsp;</i>Twitter
         </a>
