--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="description">
-   I am a graduate in political science and a student of journalism. Although originally from Kerala, I am currently a resident of Navi Mumbai in Maharashtra. I have 16 bylines across four recognised Indian publications (The Hindu, The Citizen, The Print, LiveWire).
+   I am a data journalist based in Mumbai. I work at Moneycontrol, India's leading business news portal. I love telling stories using numbers, especially numbers that are visualised. In the past, I have also written for The Hindu, The Print, The Citizen, and LiveWire.
     </div>
 <hr color="#fffff"></hr>
     <div class="links">
@@ -28,15 +28,10 @@
 	<a class="link" href="https://sreedev98.github.io/portfolio.html" target="_blank">
             <i class="fas fa-blog">&nbsp;</i>Portfolio
         </a>
-	<a class="link" href="https://nowagestorytelling.shorthandstories.com/navi-mumbai-metro-the-story-of-a-project-that-went-off-track/index.html" target="_blank">
-            <i class="fas fa-bookmark">&nbsp;</i>Investigative Project: "Navi Mumbai Metro: The story of a project that went off-track"
+	s<a class="link" href="https://www.moneycontrol.com/author/sreedev-krishnakumar-23991/" target="_blank">
+            <i class="fas fa-pen-nib">&nbsp;</i>Moneycontrol Author Profile
         </a>
-	<a class="link" href="https://www.thecitizen.in/index.php/en/NewsDetail/index/9/21606/Alcohol-Consumption-Falls--Is-Kerala-Getting-High" target="_blank">
-            <i class="fas fa-bookmark">&nbsp;</i>Latest Published Story: "Alcohol Consumption Falls – Is Kerala Getting High?"
-        </a>
-		<a class="link" href="https://coveringdeprivation.acjnewsline.org/trapped-in-the-sugarcane-fields-of-beed/" target="_blank">
-            <i class="fas fa-bookmark">&nbsp;</i>Covering Deprivation Project: "Trapped in the sugarcane fields of Beed"
-        </a>
+	<hr>
 	<a class="link" href="https://www.thecitizen.in/index.php/en/contributor/detail/SREEDEV-KRISHNAKUMAR" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>The Citizen Author Profile
         </a>
@@ -55,7 +50,7 @@
 		<a class="link" href="https://politicobytes.wordpress.com/" target="_blank">
             <i class="fas fa-blog">&nbsp;</i>Blog
         </a>
-	<a class="link" rel="me" href="https://mastodon.online/@sreedevkkumar" target="_blank">
+	<a class="link" rel="me" href="https://journa.host/@sreedevkkumar" target="_blank">
             <i class="fab fa-mastodon">&nbsp;</i>Mastodon
         </a>
 		<a class="link" href="https://twitter.com/sreedevkkumar" target="_blank">
