--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 	<a class="link" href="https://sreedev98.github.io/portfolio.html" target="_blank">
             <i class="fas fa-blog">&nbsp;</i>Portfolio
         </a>
-	s<a class="link" href="https://www.moneycontrol.com/author/sreedev-krishnakumar-23991/" target="_blank">
+	<a class="link" href="https://www.moneycontrol.com/author/sreedev-krishnakumar-23991/" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>Moneycontrol Author Profile
         </a>
-	<hr>
+<details>
+  <summary>Past Bylines</summary>
 	<a class="link" href="https://www.thecitizen.in/index.php/en/contributor/detail/SREEDEV-KRISHNAKUMAR" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>The Citizen Author Profile
         </a>
@@ -47,9 +48,7 @@
 		<a class="link" href="https://www.thehindu.com/profile/author/Sreedev-Krishna-Kumar-72316/" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>The Hindu Author Profile 2
         </a>
-		<a class="link" href="https://politicobytes.wordpress.com/" target="_blank">
-            <i class="fas fa-blog">&nbsp;</i>Blog
-        </a>
+</details>
 	<a class="link" rel="me" href="https://journa.host/@sreedevkkumar" target="_blank">
             <i class="fab fa-mastodon">&nbsp;</i>Mastodon
         </a>
