--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <i class="fas fa-pen-nib">&nbsp;</i>Moneycontrol Author Profile
         </a>
 <details>
-  <summary>Past Bylines</summary>
+  <summary><i class="fas fa-hand-pointer">&nbsp;</i>Past Bylines</summary>
 	<a class="link" href="https://www.thecitizen.in/index.php/en/contributor/detail/SREEDEV-KRISHNAKUMAR" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>The Citizen Author Profile
         </a>
