--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
 <hr color="#fffff"></hr>
     <div class="links">
         </a>
-	<a class="link" href="https://sreedev98.github.io/portfolio.html" target="_blank">
-            <i class="fas fa-blog">&nbsp;</i>Portfolio
-        </a>
 	<a class="link" href="https://www.moneycontrol.com/author/sreedev-krishnakumar-23991/" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>Moneycontrol Author Profile
         </a>
@@ -49,6 +46,9 @@
             <i class="fas fa-pen-nib">&nbsp;</i>The Hindu Author Profile 2
         </a>
 </details>
+	<a class="link" href="https://sreedev98.github.io/portfolio.html" target="_blank">
+            <i class="fas fa-blog">&nbsp;</i>Portfolio (Yet to be updated)
+        </a>
 	<a class="link" rel="me" href="https://journa.host/@sreedevkkumar" target="_blank">
             <i class="fab fa-mastodon">&nbsp;</i>Mastodon
         </a>
