--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <i class="fas fa-pen-nib">&nbsp;</i>Moneycontrol Author Profile
         </a>
 	<a class="link" href="https://sreedev98.github.io/mc_articles_repository.html" target="_blank">
-            <i class="fa-solid fa-box-archive">&nbsp;</i>Archive
+            <i class="fas fa-archive">&nbsp;</i>Archive
         </a>
 	
 <details>
