--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<a class="link" href="https://sreedev98.github.io/mc_articles_repository.html" target="_blank">
             <i class="fas fa-archive">&nbsp;</i>Archive
         </a>
-	
+</details>	
 <details>
   <summary><i class="fas fa-hand-pointer">&nbsp;</i>Past Bylines</summary>
 	<a class="link" href="https://www.thecitizen.in/index.php/en/contributor/detail/SREEDEV-KRISHNAKUMAR" target="_blank">
