--- a/index.html
+++ b/index.html
@@ -20,23 +20,20 @@
     </div>
 
     <div class="description">
-   I am a data journalist based in Mumbai. I work at Moneycontrol, India's leading business news portal. I love telling stories using numbers, especially numbers that are visualised. In the past, I have also written for The Hindu, The Print, The Citizen, and LiveWire.
+   I am a data journalist based in Mumbai. I work at Hindustan Times, one of the largest newspapers in India. In the past, I have also worked with/written for publications such as Moneycontrol, The Hindu, The Print, The Citizen, and LiveWire.
     </div>
 <hr color="#fffff"></hr>
     <div class="links">
         </a>
 	
+<a class="link" href="https://www.hindustantimes.com/author/sreedev-krishnakumar-101705555429540" target="_blank">
+            <i class="fas fa-pen-nib">&nbsp;</i>Hindustan Times Author Profile
+        </a>
 <details>
-  <summary><i class="fas fa-pen-nib">&nbsp;</i>Moneycontrol</summary>
+  <summary><i class="fas fa-hand-pointer">&nbsp;</i>Past Bylines</summary>
 	<a class="link" href="https://www.moneycontrol.com/author/sreedev-krishnakumar-23991/" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>Moneycontrol Author Profile
         </a>
-	<a class="link" href="https://sreedev98.github.io/mc_articles_repository.html" target="_blank">
-            <i class="fas fa-archive">&nbsp;</i>Archive
-        </a>
-</details>	
-<details>
-  <summary><i class="fas fa-hand-pointer">&nbsp;</i>Past Bylines</summary>
 	<a class="link" href="https://www.thecitizen.in/index.php/en/contributor/detail/SREEDEV-KRISHNAKUMAR" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>The Citizen Author Profile
         </a>
