--- a/index.html
+++ b/index.html
@@ -50,9 +50,6 @@
             <i class="fas fa-pen-nib">&nbsp;</i>The Hindu Author Profile 2
         </a>
 </details>
-	<a class="link" href="https://sreedev98.github.io/portfolio.html" target="_blank">
-            <i class="fas fa-blog">&nbsp;</i>Portfolio (Yet to be updated)
-        </a>
 	<a class="link" rel="me" href="https://journa.host/@sreedevkkumar" target="_blank">
             <i class="fab fa-mastodon">&nbsp;</i>Mastodon
         </a>
@@ -62,6 +59,7 @@
         <a class="link" href="https://www.instagram.com/sreedevkkumar/" target="_blank">
             <i class="fab fa-instagram">&nbsp;</i>Instagram
         </a>
+	    Email: sreedev[dot]kumar[at]hindustantimes[dot]com
     </div>
 <br />
 </body>
