--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sreedev's Links</title>
+    <title>Sreedev Krishnakumar - My Links</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="icon" href="userimage.jpg" type="image/x-icon" />
@@ -59,7 +59,7 @@
         <a class="link" href="https://www.instagram.com/sreedevkkumar/" target="_blank">
             <i class="fab fa-instagram">&nbsp;</i>Instagram
         </a>
-	    Email: sreedev[dot]kumar[at]hindustantimes[dot]com
+	    <center><font color="#FFFFFF">Email: sreedev[dot]kumar[at]hindustantimes[dot]com</font>font></center>
     </div>
 <br />
 </body>
