--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a class="link" href="https://www.instagram.com/sreedevkkumar/" target="_blank">
             <i class="fab fa-instagram">&nbsp;</i>Instagram
         </a>
-	    <center><font color="#FFFFFF">Email: sreedev[dot]kumar[at]hindustantimes[dot]com</font>font></center>
+	    <center><font color="#FFFFFF">Email: sreedev[dot]kumar[at]hindustantimes[dot]com</font></center>
     </div>
 <br />
 </body>
