--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="description">
-   I am a data journalist based in Mumbai. I work at Hindustan Times, one of the largest newspapers in India. In the past, I have also worked with/written for publications such as Moneycontrol, The Hindu, The Print, The Citizen, and LiveWire.
+   I am a data journalist based in Mumbai. I work at Hindustan Times, one of the largest news publications in India. In the past, I have also worked with/written for publications such as Moneycontrol, The Hindu, The Print, The Citizen, and LiveWire.
     </div>
 <hr color="#fffff"></hr>
     <div class="links">
