--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
 	<a class="link" rel="me" href="https://journa.host/@sreedevkkumar" target="_blank">
             <i class="fab fa-mastodon">&nbsp;</i>Mastodon
         </a>
-		<a class="link" href="https://twitter.com/sreedevkkumar" target="_blank">
-            <i class="fab fa-twitter">&nbsp;</i>Twitter
+		<a class="link" href="https://in.linkedin.com/in/sreedev-krishnakumar-a51147198" target="_blank">
+            <i class="fab fa-linkedin">&nbsp;</i>LinkedIn
         </a>
         <a class="link" href="https://www.instagram.com/sreedevkkumar/" target="_blank">
             <i class="fab fa-instagram">&nbsp;</i>Instagram
+        </a>
+	    <a class="link" href="https://twitter.com/sreedevkkumar" target="_blank">
+            <i class="fab fa-twitter">&nbsp;</i>Twitter
         </a>
 	    <center><font color="#FFFFFF">Email: sreedev[dot]kumar[at]hindustantimes[dot]com</font></center>
     </div>
