--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     <div class="description">
    I am a data journalist based in Mumbai. I work at Hindustan Times, one of the largest news publications in India. In the past, I have also worked with/written for publications such as Moneycontrol, The Hindu, The Print, The Citizen, and LiveWire.
     </div>
-<hr color="#fffff"></hr>
     <div class="links">
-        </a>
 	
 <a class="link" href="https://www.hindustantimes.com/author/sreedev-krishnakumar-101705555429540" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>Hindustan Times Author Profile
@@ -40,14 +38,14 @@
 	<a class="link" href="https://theprint.in/author/sreedev-krishnakumar/" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>The Print Author Profile
         </a>
-        <a class="link" href="https://livewire.thewire.in/author/sreedev-krishnakumar/" target="_blank">
-            <i class="fas fa-pen-nib">&nbsp;</i>Live Wire Author Profile
-        </a>
 		<a class="link" href="https://www.thehindu.com/profile/author/Sreedev-Krishnakumar-71765/" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>The Hindu Author Profile 1
         </a>
 		<a class="link" href="https://www.thehindu.com/profile/author/Sreedev-Krishna-Kumar-72316/" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>The Hindu Author Profile 2
+        </a>        
+	<a class="link" href="https://web.archive.org/web/20210726130348/https://livewire.thewire.in/author/sreedev-krishnakumar/" target="_blank">
+            <i class="fas fa-pen-nib">&nbsp;</i>Live Wire Author Profile (Archived)
         </a>
 </details>
 	<a class="link" rel="me" href="https://journa.host/@sreedevkkumar" target="_blank">
@@ -64,7 +62,6 @@
         </a>
 	    <center><font color="#FFFFFF">Email: sreedev[dot]kumar[at]hindustantimes[dot]com</font></center>
     </div>
-<br />
 </body>
 
 </html>
