--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <i class="fas fa-pen-nib">&nbsp;</i>Live Wire Author Profile (Archived)
         </a>
 </details>
+	<a class="link" rel="me" href="https://sreedev98.github.io/resume.html" target="_blank">
+            <i class="fa-solid fa-file">&nbsp;</i>Resume
+        </a>	    
 	<a class="link" rel="me" href="https://journa.host/@sreedevkkumar" target="_blank">
             <i class="fab fa-mastodon">&nbsp;</i>Mastodon
         </a>
