--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </a>
 </details>
 	<a class="link" rel="me" href="https://sreedev98.github.io/resume.html" target="_blank">
-            <i class="fa-solid fa-file">&nbsp;</i>Resume
+            <i class="fas fa-file">&nbsp;</i>Resume
         </a>	    
 	<a class="link" rel="me" href="https://journa.host/@sreedevkkumar" target="_blank">
             <i class="fab fa-mastodon">&nbsp;</i>Mastodon
