--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sreedev Krishna Kumar - Data Journalist</title>
+    <title>Sreedev Krishna Kumar - Resume</title>
     <style>
         /* Basic Reset */
         * {
