--- a/resume.html
+++ b/resume.html
@@ -221,12 +221,12 @@
             <div class="education-item">
                 <h3>Asian College of Journalism</h3>
                 <p class="date">Jul 2021 - May 2022</p>
-                <p>Postgraduate Diploma | Integrated Multimedia Journalism. Trained in innovative and immersive storytelling techniques and co-anchored the Asian College of Journalism segment of the Global News Relay hosted by Leeds Trinity University.</p>
+                <p class="date">Postgraduate Diploma | Integrated Multimedia Journalism</p><p> Trained in innovative and immersive storytelling techniques and co-anchored the Asian College of Journalism segment of the Global News Relay hosted by Leeds Trinity University.</p>
             </div>
             <div class="education-item">
                 <h3>Wilson College</h3>
                 <p class="date">Jun 2017 - Oct 2020</p>
-                <p>Bachelor of Arts | Political Science. Vice President of the Political Science Association of Wilson College (2019-20). Participated in the Co-operative Education Programme.</p>
+                <p class="date">Bachelor of Arts | Political Science</p><p> Vice President of the Political Science Association of Wilson College (2019-20). Participated in the Co-operative Education Programme.</p>
             </div>
         </section>
 
