--- a/index.html
+++ b/index.html
@@ -25,46 +25,46 @@
     <div class="links">
 	
 <a class="link" href="https://www.hindustantimes.com/author/sreedev-krishnakumar-101705555429540" target="_blank">
-            <i class="fa-solid fa-pen-nib"></i>Hindustan Times Author Profile
+            <i class="fa-solid fa-pen-nib">&nbsp;</i>Hindustan Times Author Profile
         </a>
 <details>
   <summary><i class="fa-solid fa-hand-pointer"></i>Past Bylines</summary>
 	<a class="link" href="https://www.moneycontrol.com/author/sreedev-krishnakumar-23991/" target="_blank">
-            <i class="fa-solid fa-pen-nib"></i>Moneycontrol Author Profile
+            <i class="fa-solid fa-pen-nib">&nbsp;</i>Moneycontrol Author Profile
         </a>
 	<a class="link" href="https://www.thecitizen.in/index.php/en/contributor/detail/SREEDEV-KRISHNAKUMAR" target="_blank">
-            <i class="fa-solid fa-pen-nib"></i>The Citizen Author Profile
+            <i class="fa-solid fa-pen-nib">&nbsp;</i>The Citizen Author Profile
         </a>
 	<a class="link" href="https://theprint.in/author/sreedev-krishnakumar/" target="_blank">
-            <i class="fa-solid fa-pen-nib"></i>The Print Author Profile
+            <i class="fa-solid fa-pen-nib">&nbsp;</i>The Print Author Profile
         </a>
 		<a class="link" href="https://www.thehindu.com/profile/author/Sreedev-Krishnakumar-71765/" target="_blank">
-            <i class="fa-solid fa-pen-nib"></i>The Hindu Author Profile 1
+            <i class="fa-solid fa-pen-nib">&nbsp;</i>The Hindu Author Profile 1
         </a>
 		<a class="link" href="https://www.thehindu.com/profile/author/Sreedev-Krishna-Kumar-72316/" target="_blank">
-            <i class="fa-solid fa-pen-nib"></i>The Hindu Author Profile 2
+            <i class="fa-solid fa-pen-nib">&nbsp;</i>The Hindu Author Profile 2
         </a>        
 	<a class="link" href="https://web.archive.org/web/20210726130348/https://livewire.thewire.in/author/sreedev-krishnakumar/" target="_blank">
-            <i class="fa-solid fa-pen-nib"></i>Live Wire Author Profile (Archived)
+            <i class="fa-solid fa-pen-nib">&nbsp;</i>Live Wire Author Profile (Archived)
         </a>
 </details>
 	<a class="link" rel="me" href="https://sreedev98.github.io/resume.html" target="_blank">
-            <i class="fa-solid fa-file"></i>&nbsp;</i>Resume
+            <i class="fa-solid fa-file">&nbsp;</i>Resume
         </a>	    
 	<a class="link" rel="me" href="https://journa.host/@sreedevkkumar" target="_blank">
-            <i class="fa-brands fa-mastodon"></i>Mastodon
+            <i class="fa-brands fa-mastodon">&nbsp;</i>Mastodon
         </a>
 	<a class="link" rel="me" href="https://bsky.app/profile/sreedevkkumar.bsky.social" target="_blank">
-            <i class="fa-brands fa-bluesky"></i>Bluesky
+            <i class="fa-brands fa-bluesky">&nbsp;</i>Bluesky
         </a>
 		<a class="link" href="https://in.linkedin.com/in/sreedev-krishnakumar-a51147198" target="_blank">
-            <i class="fa-brands fa-linkedin"></i>LinkedIn
+            <i class="fa-brands fa-linkedin">&nbsp;</i>LinkedIn
         </a>
         <a class="link" href="https://www.instagram.com/sreedevkkumar/" target="_blank">
-            <i class="fa-brands fa-instagram"></i>Instagram
+            <i class="fa-brands fa-instagram">&nbsp;</i>Instagram
         </a>
 	    <a class="link" href="https://twitter.com/sreedevkkumar" target="_blank">
-            <i class="fa-brands fa-twitter"></i>Twitter
+            <i class="fa-brands fa-twitter">&nbsp;</i>Twitter
         </a>
 	    <center><font color="#FFFFFF">Email: sreedev[dot]kumar[at]hindustantimes[dot]com</font></center>
     </div>
