--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <i class="fa-solid fa-pen-nib">&nbsp;</i>Hindustan Times Author Profile
         </a>
 <details>
-  <summary><i class="fa-solid fa-hand-pointer"></i>Past Bylines</summary>
+  <summary><i class="fa-solid fa-hand-pointer">&nbsp;</i>Past Bylines</summary>
 	<a class="link" href="https://www.moneycontrol.com/author/sreedev-krishnakumar-23991/" target="_blank">
             <i class="fa-solid fa-pen-nib">&nbsp;</i>Moneycontrol Author Profile
         </a>
